Magick.NET.Native/MagickImage.h



MAGICK_NET_EXPORT void MagickImage_EvaluateOperator(Image *, const size_t, const size_t, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Extent(const Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_ExtentGravity(const Image *, const char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT MagickBooleanType MagickImage_HasChannel(const Image *, const size_t);


MAGICK_NET_EXPORT Image *MagickImage_Flip(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Flop(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT TypeMetric *MagickImage_FontTypeMetrics(Image *, const DrawInfo *, const MagickBooleanType, ExceptionInfo **);


MAGICK_NET_EXPORT char *MagickImage_FormatExpression(Image *, ImageInfo *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Frame(const Image *, const RectangleInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Fx(Image *, const char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_GammaCorrect(Image *, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_GaussianBlur(Image *, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT const char *MagickImage_GetArtifact(const Image *, const char *);


MAGICK_NET_EXPORT const char *MagickImage_GetAttribute(const Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT size_t MagickImage_GetBitDepth(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT PixelInfo *MagickImage_GetColormap(const Image *, const size_t);


MAGICK_NET_EXPORT Image *MagickImage_GetNext(const Image *);


MAGICK_NET_EXPORT const char *MagickImage_GetNextArtifactName(const Image *);


MAGICK_NET_EXPORT const char *MagickImage_GetNextAttributeName(const Image *);


MAGICK_NET_EXPORT const char *MagickImage_GetNextProfileName(const Image *);


MAGICK_NET_EXPORT const StringInfo *MagickImage_GetProfile(const Image *, const char *);


MAGICK_NET_EXPORT void MagickImage_Grayscale(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_HaldClut(Image *, const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT MagickBooleanType MagickImage_HasProfile(const Image *, const char *);


MAGICK_NET_EXPORT PixelInfo *MagickImage_Histogram(const Image *, size_t *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_HoughLine(const Image *, const size_t, const size_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Implode(const Image *, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Kuwahara(const Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Level(Image *, const double, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_LevelColors(Image *, const PixelInfo *, const PixelInfo *, const size_t, const MagickBooleanType, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Levelize(Image *, const double, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_LinearStretch(Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_LiquidRescale(const Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_LocalContrast(const Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Magnify(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT const MagickBooleanType MagickImage_Map(Image *, const Image *, const QuantizeInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Minify(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Modulate(Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT ChannelMoments *MagickImage_Moments(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Morphology(Image *, const size_t, const char *, const size_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_MotionBlur(const Image *, const double, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Negate(Image *, const MagickBooleanType, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Normalize(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_OilPaint(const Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Opaque(Image *, const PixelInfo *, const PixelInfo *, const MagickBooleanType, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_OrderedDither(Image *, const char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Perceptible(Image *, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT ChannelPerceptualHash *MagickImage_PerceptualHash(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Quantize(Image *, const QuantizeInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Polaroid(Image *, const DrawInfo *, const char *, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Posterize(Image *, const size_t, const size_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_RaiseOrLower(Image *, const size_t, const MagickBooleanType, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_RandomThreshold(Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_ReadBlob(const ImageInfo *, const unsigned char *, const size_t, ExceptionInfo **);